<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/white_text_bg"
        android:focusable="false"
        android:gravity="end|bottom"
        android:padding="10sp"
        android:id="@+id/et_input"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                style="@style/button_1"
                android:text="@string/btn_C"
                android:id="@+id/btn_c"/>

            <Button
                style="@style/button_1"
                android:text="@string/btn_DEL"
                android:id="@+id/btn_del"/>

            <Button
                style="@style/button_1"
                android:text="@string/btn_divide"
                android:id="@+id/btn_divide"/>

            <Button
                style="@style/button_1"
                android:text="@string/btn_multiply"
                android:id="@+id/btn_multiply"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                style="@style/button_1"
                android:text="@string/btn_7"
                android:id="@+id/btn_7"/>

            <Button
                style="@style/button_1"
                android:text="@string/btn_8"
                android:id="@+id/btn_8" />

            <Button
                style="@style/button_1"
                android:text="@string/btn_9"
                android:id="@+id/btn_9" />

            <Button
                style="@style/button_1"
                android:id="@+id/btn_minus"
                android:text="@string/btn_minus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                style="@style/button_1"
                android:text="@string/btn_4"
                android:id="@+id/btn_4" />

            <Button
                style="@style/button_1"
                android:text="@string/btn_5"
                android:id="@+id/btn_5"/>

            <Button
                style="@style/button_1"
                android:text="@string/btn_6"
                android:id="@+id/btn_6" />

            <Button
                style="@style/button_1"
                android:text="@string/btn_add"
                android:id="@+id/btn_add"/>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <Button
                        style="@style/button_1"
                        android:text="@string/btn_1"
                        android:id="@+id/btn_1" />

                    <Button
                        style="@style/button_1"
                        android:text="@string/btn_2"
                        android:id="@+id/btn_2" />

                    <Button
                        style="@style/button_1"
                        android:text="@string/btn_3"
                        android:id="@+id/btn_3"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <Button
                        style="@style/button_2"
                        android:id="@+id/btn_0"
                        android:text="@string/btn_0"/>

                    <Button
                        style="@style/button_1"
                        android:text="@string/btn_point"
                        android:id="@+id/btn_point"/>
                </LinearLayout>

            </LinearLayout>

            <Button
                style="@style/button_3"
                android:text="@string/btn_equal"
                android:id="@+id/btn_equal"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>